
Note: over its 35+ year history, cdecl has never had good version numbering.
For changes in a particular version where the version number is unknown, the
version's author is given instead.  For the full (known) list of authors along
with their complete changes, see the AUTHORS file.

-------------------------------------------------------------------------------

* Changes in Cdecl 11.9

** Function-like parameter redefinition
Function-like parameters are now checked for redefinition (more than one
parameter having the same name).


* Changes in Cdecl 11.8

** New cdecl keywords
There are now the new pseudo-English keywords of `evaluation` (plus `eval` as a
shorthand), `expression` (plus `expr`), and `initialization` (plus `init`) that
can optionally be used after `constant` (or `const`) instead of `consteval`,
`constexpr`, or `constinit`, respectively:

    c++decl> declare f as constant expression function returning int
    constexpr int f();

There are now the new pseudo-English keywords of `maybe`, `unused`, `thread`,
`local`, as well as `discard`, `except`, and `return` that can be used after
`no` that can be used instead of `maybe_unused`, `thread_local`, `nodiscard`,
`noexcept`, and `noreturn`.

** Fixed reading of stdin
The "no files as arguments" change broke reading of stdin; fixed.


* Changes in Cdecl 11.7

** Cdecl keywords
When an unexpected name token is encountered, if said token is a cdecl keyword,
it's now mentioned in the error message:

    cdecl> declare ptr as pointer to void
                   ^
    16: syntax error: "ptr": name expected ("ptr" is a cdecl keyword)

Additionally, cdecl keywords are now also offered in suggestions.

** `register` arrays
`register` arrays are now correctly allowed.

** Zero-sized arrays
Zero-sized arrays are now correctly forbidden.

** No files as arguments
Command-line arguments were treated as files if they weren't commands.  This
dubious use-case was a hold-over from the original cdecl and has been removed.