@@ -1,0 +1,4 @@
+explain int x, *x
+               ^
+16: error: "x": redefinition with different type
+declare x as int
