@@ -1,0 +1,1 @@
+cdecl @ @ @ explain int x, *x @ 65
